pipeline/api-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-pipeline
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: grpc
    port: 8887
    protocol: TCP
    targetPort: 8887
