pipeline/api-service/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mlflow-tracking-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/whitelist-source-range: 81.82.223.183/32
spec:
  tls:
    - hosts:
        - kubeflow-pipeline-api.dev-internal.app.metamaze.eu
      secretName: kubeflow-pipeline-api-tls
  rules:
    - host: kubeflow-pipeline-api.dev-internal.app.metamaze.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: ml-pipeline
              servicePort: 8888
